force-app/main/default/objects/Account/fields/DemoDev1__c.field-meta.xml
<CustomField>
    <fullName>DemoDev1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DemoDev1</label>
    <type>Checkbox</type>
</CustomField>