force-app/main/default/objects/Account/fields/DemoDev2__c.field-meta.xml
<CustomField>
    <fullName>DemoDev2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DemoDev2</label>
    <type>Checkbox</type>
</CustomField>