force-app/main/default/objects/Account/fields/Region2__c.field-meta.xml
<CustomField>
    <fullName>Region2__c</fullName>
    <label>Region2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>