force-app/main/default/objects/Account/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zone 1</fullName>
            </value>
            <value>
                <fullName>Zone 2</fullName>
            </value>
            <value>
                <fullName>Zone 3</fullName>
            </value>
            <value>
                <fullName>Zone 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>