force-app/main/default/objects/Account/recordTypes/Account_Record.recordType-meta.xml
<RecordType>
    <fullName>Account_Record</fullName>
    <active>true</active>
    <label>Account Record</label>
</RecordType>